Fixed top bar z-index

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -46,6 +46,7 @@ body {
   font-family: 'PT Sans', sans-serif;
 }
 .top-bar {
+  z-index: 1;
   width: 100%;
   display: flex;
   justify-content: center;
